--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "start": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
     "koa": "^2.11.0",
     "koa-art-template": "^1.1.1",
     "koa-bodyparser": "^4.2.1",
-    "koa-router": "^8.0.7"
+    "koa-router": "^8.0.7",
+    "koa-static": "^5.0.0",
+    "koa-static-cache": "^5.1.2"
   }
 }
