--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "koa-art-template": "^1.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.7",
+    "koa-session": "^5.13.1",
     "koa-static": "^5.0.0",
-    "koa-static-cache": "^5.1.2"
+    "koa-static-cache": "^5.1.2",
+    "sqlite3": "^4.1.1"
   }
 }
